# Hackathone2_phase2026

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  create_tables.sql  speckit.plan  test_functionality.md  tmp_spec_content.md
.claude/agents/: auth-security-agent.md  backend-architect-phase2.md  data-persistence-agent.md  frontend-architect-p2.md  integration-orchestrator.md  requirement-validator.md  spec-validator.md  workflow-enforcer.md
.claude/skills/: agentic-dev-workflow.md  spec-driven-analysis.md  (+4 more)
audit-reports/: .gitkeep  final-audit-report.md  initial-findings.md
audit-scripts/: .gitkeep
backend/: .env.example  .gitignore  README.md  db.py  main.py  models.py  pyproject.toml  server.err  server_final.err  server_final_2.err  server_final_3.err  server_final_restart.err  server_restart.err
backend/alembic/: env.py
backend/alembic/versions/: 472e954b78f5_initial_migration_for_user_and_task_.py
backend/app/: config.py  constants.py  database.py  errors.py  main.py  models.py
backend/app/middleware/: auth.py  cors.py
backend/app/repositories/: base.py  task_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth.py  health.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  common.py  task.py  user.py
backend/app/services/: auth.py  task_service.py
backend/app/utils/: jwt.py
backend/middleware/: auth.py
backend/routes/: auth.py  tasks.py
frontend/: .gitignore  middleware.ts.backup  next.config.js  package-lock.json  package.json  tailwind.config.ts
specs/: backend-specification.md  overview.md
(+63 files in other folders)
